--- a/public/views/survey.html
+++ b/public/views/survey.html
@@ -160,7 +160,8 @@
 		    </div>
 		</div> <!-- close form-horizontal -->
 	    </form>
-	    
 	</div> <!-- close container -->
+
+	<script src="scripts/script.js" type="text/javascript"></script>
     </body>
 </html>
