almost finished, need to get compare fucntion to work and update readme

--- a/public/views/survey.html
+++ b/public/views/survey.html
@@ -11,9 +11,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<!-- bootstrap link -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="" rel="stylesheet" type="text/css">
-	
     </head>
+
     <body>
 	<div class="container">
 
@@ -40,7 +39,7 @@
 			</div>
 			<div class="modal-body">
 			    <h3 id="bestName"></h3>
-			    <div id="bestPic"></div>
+			    <img id="bestPic">
 			</div>
 			<div class="modal-footer">
 			    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
